--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
 
     // আপনার সেটিংস
     const botUsername = "Bangalchotigolpo_bot"; 
-    const miniAppName = "Bangalchotigolpo_bot"; // যেহেতু নাম একই
+    const miniAppName = "Bangalchotigolpo"; // যেহেতু নাম একই
     
     const title = document.getElementById('read-title').innerText;
     
