--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <script>
         // --- CONFIGURATION ---
         const ADMIN_EMAIL = "bcg332006@gmail.com";
-        const DEFAULT_CATS = ['রোমান্টিক', 'পরকীয়া', 'ইনসেস্ট', 'ভাবি', 'লেসবিয়ান', 'ফ্যান্টাসি', 'অন্যান্য'];
+        const DEFAULT_CATS = ['রোমান্টিক', 'পরকীয়া', 'ইনসেস্ট', 'ভাবি', 'লেসবিয়ান', 'ফ্যান্টাসি', 'অন্যান্য','মা ছেলে '];
 
         const firebaseConfig = {
             apiKey: "AIzaSyA4gqOdRYydzPOR7a8brxBy2Bs49MtVqJw",
